--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "events": "^3.0.0",
+    "flux": "^3.1.3",
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-native-modalbox": "^1.4.2"
   },
   "devDependencies": {
     "babel-jest": "22.4.4",
